5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1734_2499.log
== TEST (2019-05-09 19:32:10) 
-- CODE:
k=int(input("i"))
from math import
e=0
i=0
while(i<k):
	e=e+factorial(k)
	i=i+1
	print(e)
	
	

-- ERROR:
File "XXXX", line 2
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:32:17) 
-- CODE:
k=int(input("i"))
*from math import
e=0
i=0
while(i<k):
	e=e+factorial(k)
	i=i+1
	print(e)
	
	

-- ERROR:
File "XXXX", line 2
    *from math import
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:32:27) 
-- CODE:
k=int(input("i"))
from math import
e=0
i=0
while(i<k):
	e=e+factorial(k)
	i=i+1
	print(e)
	
	

-- ERROR:
File "XXXX", line 2
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:32:46) 
-- CODE:
k=int(input("i"))
from math import*
e=0
i=0
while(i<k):
	e=e+factorial(k)
	i=i+1
	print(e)
	
	

-- OUTPUT:
5040
10080
15120
20160
25200
30240
35280
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:33:38) 
-- CODE:
k=int(input("i"))
from math import*
e=0
i=0
while(i<k):
	e=e+factorial(k)
	i=i+1
print(round(e,8))
	
	

-- OUTPUT:
35280
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:36:52) 
-- CODE:
k=int(input("i"))
from math import*
e=0
i=0
while(i<k):
	e= e + 1/factorial(i)
	i=i+1
print(round(e,8))
	
	

-- EXECUTION TIME:
0.129154
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
